@@ -85,6 +85,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #25590: In the Readline completer, only call getattr() once per
+  attribute.  Also complete names of attributes such as properties and slots
+  which are listed by dir() but not yet created on an instance.
+
 - Issue #25498: Fix a crash when garbage-collecting ctypes objects created
   by wrapping a memoryview.  This was a regression made in 3.5a1.  Based
   on patch by Eryksun.
